# ChatStoreHub

./: .gitignore  README.md  install_ui.sh  startServer.sh
backend/: CMakeLists.txt  README.md  build.sh  execute.sh  init.sql
backend/log/: 2024-08-17_dialog-log.txt  2024-08-17_dialog_log.txt  2024-08-17_login_log.txt  execute_log.txt
backend/src/: compile.sh  dialog  dialog.c  log.c  log.h  login  login.c  model.py
backend/test/: connect.c  download.c  test.txt  upload.c
backend/test_demo/: ceph-client  ceph_librados.cpp  upload.c
config/: nginx.conf
frontend/src/: dialogue.html  login.html
prerequisites/: all_node.sh  cephadm  install_cephadm.sh  install_nginx.sh
